fix image spacing

--- a/youniverse/src/app/onboarding/welcome_screen/page.module.css
+++ b/youniverse/src/app/onboarding/welcome_screen/page.module.css
@@ -1,7 +1,5 @@
 .welcome__image{
     z-index: 1;
-    width: 100%;
-    height: auto;
     object-fit: cover;
   }
 
